# HackerNews

./: README.md  babel.config.json  instructions.md  jest.config.cjs  package-lock.json  package.json  svelte.config.js  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: gpts.rs  lib.rs  main.rs  models.rs  prompts.rs  state.rs
src-tauri/src/apis/: hacker_news.rs  jina_ai.rs  keys.rs  mod.rs  oa_client.rs  summaries.rs
src-tauri/src/apis/test/: jina_ai.rs
src/lib/: index.ts  jina_ai.ts  open_ai.ts  system_prompts.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/settings/: +page.svelte
src/routes/story/[id]/: +page.svelte
src/tests/: index.test.ts  jina_ai.test.ts
