[package]
name = "hacker-news"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hacker_news_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
lazy_static = "1.4.0"
async-openai = "0.24.0"
futures = "0.3.30"
tokio = { version = "1.40.0", features = ["full"] }
derive_more = { version = "1.0.0", features = ["full"] }
rpc-router = "0.1.3"
dotenv = "0.15.0"
kalosm = { git = "https://github.com/floneum/floneum", version = "0.3.2", features = ["full"] }
